# esp_radio

./: .gitignore  .gitmodules
Docs/: ipradio_playlist.txt  pcb_checklist.txt
Firmware/: .gitignore  esp_radio.code-workspace  partitions.csv  prepare_idf.ps1  prepare_idf.sh  sdkconfig
Firmware/Web/: do_copy.sh  package-lock.json  package.json  vue.config.js
Firmware/Web/public/: index.html
Firmware/Web/src/: App.vue  main.js
Firmware/Web/src/components/: alerts.vue  device.vue  devices.vue  devices_toolbar.vue  fmradio_list.vue  fmradio_toolbar.vue  ipradio_list.vue  ipradio_toolbar.vue  navbar.vue  player.vue  settings.vue  sysinfo.vue
Firmware/Web/src/mocks/: handlers.js
Firmware/Web/src/scss/: styles.scss
Firmware/components/MerusAudio/: CMakeLists.txt  MerusAudio.c
Firmware/components/MerusAudio/include/: MerusAudio.h
Firmware/components/RDA5807/: CMakeLists.txt  rda5807.c
Firmware/components/RDA5807/include/: rda5807.h
Firmware/components/audio_player/: CMakeLists.txt  audio_player.c
Firmware/components/audio_renderer/: CMakeLists.txt  audio_renderer.c  audio_renderer.c.new
Firmware/components/audio_renderer/include/: audio_renderer.h
Firmware/components/bt_speaker/: bt_app_av.c
Firmware/components/common/: CMakeLists.txt  common_buffer.c
Firmware/components/fdk-aac_decoder/: CMakeLists.txt  fdk_aac_decoder.c
Firmware/components/fifo/: spiram_fifo.c
Firmware/components/fifo/include/: spiram_fifo.h
Firmware/components/i2c_bus/: i2c_bus.c
Firmware/components/mad/: CMakeLists.txt
Firmware/components/mcp23017/: CMakeLists.txt  mcp23017.c
Firmware/components/mcp23017/include/: mcp23017.h
Firmware/components/mp3_decoder/: CMakeLists.txt  mp3_decoder.c
Firmware/components/u8g2/: CMakeLists.txt
Firmware/components/u8g2/csrc/: u8g2_esp32_hal.c  u8g2_esp32_hal.h
Firmware/components/ucglib/: CMakeLists.txt
Firmware/components/ucglib/csrc/: ucg_esp32_hal.c  ucg_esp32_hal.h  ucg_karadio32_fonts.h
Firmware/components/wolfssl/: CMakeLists.txt
Firmware/components/wolfssl/wolfcrypt/src/: random.c
Firmware/components/xpt2046/: CMakeLists.txt  xpt2046.c  xpt2046.h
Firmware/main/: CMakeLists.txt  ClickButtons.c  ClickEncoder.c  ClickJoystick.c  FARA1D5.tmp  addon.c  addoncommon.c  addonu8g2.c  addonucg.c  app_main.c  app_main3.h  app_main4.h  base64.c  eeprom.c  gpio.c  interface.c  irnec.c  nouveau 1.txt  ntp.c  ota.c  servers.c  telnet.c  timezone.c  vs1053.c  vs1053b-patches.c  webclient.c  webserver.c  websocket.c
Firmware/main/esp_radio/: action_manager.c  app_state.c  bus.c  buttons.c  debug_task_stats.c  ext_gpio.c  i2s_redirector.c  kmalloc.c  merus.c  network.c  test_i2s_song.c  url_parser.c  webserver.c
Firmware/main/include/: ClickButtons.h  ClickEncoder.h  addon.h  addoncommon.h  addonu8g2.h  addonucg.h  app_main.h  eeprom.h  freertos_err.h  gpio.h  interface.h  ntp.h  ota.h  servers.h  telnet.h  vs1053.h  webclient.h  webserver.h  websocket.h
Firmware/main/include/esp_radio/: action_manager.h  app_state.h  bus.h  buttons.h  debug_task_stats.h  ext_gpio.h  helpers.h  i2s_redirector.h  kmalloc.h  merus.h  network.h  test_i2s_song.h  url_parser.h  webserver.h
Pcb/Scripts/: hide_reference.sh  kicad_value_to_silkscreen.py
Pcb/esp_radio/: 74hc157.kicad_sym  AO3415A.kicad_sym  AO3416.kicad_sym  Overview.kicad_sch  RDA5807FP.kicad_sym  audio_decoder.kicad_sch  esp_board.kicad_sch  esp_radio.csv  esp_radio.kicad_pcb  esp_radio.kicad_prl  esp_radio.kicad_pro  esp_radio.kicad_sch  esp_radio.xml  fm_radio.kicad_sch  fp-info-cache  fp-lib-table  i2s_switch.kicad_sch  io_expander.kicad_sch  lcd_screen.kicad_sch  merus_amplifier.kicad_sch  power.kicad_sch  sym-lib-table  uart.kicad_sch  vs1053.kicad_sym
Pcb/esp_radio/gerber/: esp_radio-B_Cu.gbr  esp_radio-B_Mask.gbr  esp_radio-B_Paste.gbr  esp_radio-B_Silkscreen.gbr  esp_radio-Edge_Cuts.gbr  esp_radio-F_Cu.gbr  esp_radio-F_Mask.gbr  esp_radio-F_Paste.gbr  esp_radio-F_Silkscreen.gbr  esp_radio-NPTH.drl  esp_radio-PTH.drl
Tools/: convert_to_wav.py
